--- a/Script/rich_scripts/3_merge_effort_spatial_data.Rmd
+++ b/Script/rich_scripts/3_merge_effort_spatial_data.Rmd
@@ -35,7 +35,12 @@ install.packages("backports")
 install.packages("tidyverse")
 install.packages("tictoc")
 install.packages("vroom")
-
+install.packages("raster")
+install.packages("farver")
+install.packages("labeling")
+install.packages("ggpubr")
+install.packages("here")
+install.packages("RColorBrewer")
 
 
 
@@ -44,6 +49,7 @@ install.packages("vroom")
 Libraries
 ```{r}
 
+library(tidyverse)
 library(dtplyr)
 library(dplyr)
 library(data.table)
@@ -52,6 +58,10 @@ library(vroom)
 library(parallel)
 library(tictoc)
 library(geoR)
+library(raster)
+library(here)
+library(RColorBrewer)
+
 
 select <- dplyr::select
 
@@ -65,7 +75,6 @@ aggregated_files_dir <- "/rd/gem/private/users/yannickr/effort_mapped_by_country
 
 Explore files and join the main data
 ```{r}
-
 (EEZ <- read_csv(file.path(yannick_dir, "Cells_LatLon_EEZ.csv"))) 
  
 #EEZ data is duplicated in places because of disputed claims to cells - just going to take the first country listed
@@ -86,6 +95,18 @@ united_coords <- EEZ_adj %>% unite("coords", c("Lon", "Lat"), sep = " ")
 EEZ_adj <- EEZ_adj[-which(duplicated(united_coords[,"coords"])==TRUE),] %>% as.data.table() # remove duplicated EEZ records
 EEZ_adj <- lazy_dt(EEZ_adj)
 
+#check EEZ data - EEZs look ok
+
+EEZ_xyz <- EEZ_adj %>% as_tibble() %>%  rename(x=Lon, y= Lat, z=eez_country_code) %>%  select(x,y,z)  
+EEZ_raster <- raster::rasterFromXYZ(EEZ_xyz)
+
+ggplot(data = EEZ_xyz)+
+  geom_tile(aes(x=x, y=y, fill=z)) + 
+  scale_fill_gradientn(colours = RColorBrewer::brewer.pal(n = 9, name = "Spectral"))
+
+ggsave(filename = here("Explore/cottrell-explore/eez_wo_duplicates.jpg"), dpi=300, device = "jpg", width = 9, height = 5)
+
+
 
 #LME data
 (LMEs <- fread(file.path(yannick_dir, "LMESeq.csv")))
@@ -103,40 +124,22 @@ FAO_regions <- lazy_dt(FAO_regions)
 
 
 #The data have different rows. Want to make sure they line up
-nrow(EEZ) #191480
-nrow(EEZ_adj) #182995
+nrow(EEZ_adj) #179904
 nrow(as_tibble(LMEs)) #259200
 nrow(FAO_regions) #229369
 
 
-#there are some cells in LME  that do not have EEZ data
-LME_EEZ <- full_join(LMEs, EEZ_adj) #this 262291 - an extra (262291-259200 = 3091) rows
-missing_EEZ <- LME_EEZ %>% filter(is.na(eez_country_name))%>% select(Lon, Lat, LME)
+#Some LME data are around that have no FAO or EEZ data
+(all_spatial_layers <- 
+  full_join(x = full_join(x = LMEs %>% select(-Seq), y = FAO_regions, by = c("Lon", "Lat")), 
+            y = EEZ_adj %>% select(Lon, Lat, eez_country_code, eez_country_name), by = c("Lon", "Lat")) %>% as_tibble()
+)
 
+missing_fao_eez <- 
+  all_spatial_layers %>% 
+  filter(is.na(fao_area)) %>% #29831 where FAO areas are NA but LME are not
+  filter(is.na(eez_country_code)) #29830 where EEZ are NA but LME are not - this does not change depending on order. So there is one cell where the is LME data and EEZ data but not FAO area data
 
-LME_EEZ %>% filter(Lon %in% missing_EEZ$Lon & Lat %in% missing_EEZ$Lat) # the presence of cells in missing data seems to vastly outnumber
-
-#doesn't do it with these two though - perhaps the eez grid is dodgy? Try the new EEZ xy file. That worked.
-LME_FAO_regions <- full_join(LMEs, FAO_regions)
-LME_FAO_regions_EEZ <- full_join(LME_FAO_regions, EEZ)
-
-
-#there are still cells where there is no data for eezs when there is for FAO and LME, and none for FAO when there is for LME and EEZ.
-#filter both and plot them to see the error.....looks like a rasterize issue - very few number of cells missing, not too worried about that. Can edit the effort files post hoc where these data are missing for effort data (likely to be low numbers (hundreds rather than thousands of cells).
-
-(EEZ_no_data <- LME_FAO_regions_EEZ %>% 
-    filter(!(is.na(fao_area)) & is.na(eez_country)))
-
-plot(rasterFromXYZ(EEZ_no_data %>% select(Lon, Lat, LME)))
-plot(rasterFromXYZ(EEZ_no_data %>% select(Lon, Lat, fao_area)))
-
-(FAO_no_data <- LME_FAO_regions_EEZ %>% filter((is.na(fao_area)) & !is.na(eez_country)))
-
-plot(rasterFromXYZ(FAO_no_data %>% select(Lon, Lat, LME)))
-plot(rasterFromXYZ(FAO_no_data %>% select(Lon, Lat, iso3n)))
-
-#so there are no replicated grid cells which is positive
-LME_EEZ_FAO %>% select(Lon, Lat) %>% distinct()
 
 ```
 
